=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2015/06/15 0.13.2
=================

 - improved layout for smaller screens

 - fix: highlight cluster navigation item also when node is selected

 - fix: crate process cpu will now also display values greater than 100%

2015/06/09 0.13.1
=================

 - fix: load graph was not displayed when no tables where available

2015/06/09 0.13.0
=================

 - improved load graph on overview page

 - display load, cpu usage, disk i/o, process stats and shard information
   on node detail page

  - added columns with partition values on "Partitions" table
    on table detail view

2015/05/22 0.12.1
=================

  - update logo, favicons

2015/04/23 0.12.0
=================

  - display ``rest_url`` from sys.nodes table on node detail view

2015/04/09 0.11.5
=================

  - fix: concurrent ajax requests caused partition information
    in table detail view to be mixed up between tables

2015/03/05 0.11.4
=================

 - fix: calculate health for each partition of a partitioned table
   based on the number of shards of that partition

2015/02/04 0.11.3
=================

 - fixed bug that showed custom schemas in the table list
   as often as the amount of tables in that custom schema

2015/01/15 0.11.2
=================

 - removed usage of sys expressions in wrong context

 - fixed a template rendering issue in cluster view in Safari

 - de-register watches to decrease DOM updates and improve performance in cluster view

2014/12/19 0.11.1
=================

 - fixed title of `tables` view if no tables exists or connection is down

2014/12/16 0.11.0
=================

 - add support for tables with user defined schemas

 - added `Intercom <https://www.intercom.io>`_ integration
     Intercom allows you to ask questions and send messages to the Crate
     team directly from the admin interface. Click on the help button