@@ -71,7 +71,6 @@
 
     <script type="application/javascript" src="scripts/controllers/common.js"></script>
     <script type="application/javascript" src="scripts/controllers/feed.js"></script>
-    <script type="application/javascript" src="scripts/controllers/tutorial.js"></script>
     <script type="application/javascript" src="scripts/controllers/overview.js"></script>
     <script type="application/javascript" src="scripts/controllers/console.js"></script>
     <script type="application/javascript" src="scripts/controllers/tables.js"></script>
@@ -82,7 +81,7 @@
     <!-- endbuild -->
 
 </head>
-<body ng-app="crateAdminApp">
+<body>
     <!--[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
