@@ -155,12 +155,10 @@ h2, h3 {
     }
     .navbar-right > li.dropdown > a {
         padding: 0px 5px;
-    }
-    .navbar-right > li.dropdown > a:hover {
         color: #fff;
     }
     .navbar-right > li.dropdown > a:hover {
-        color: @gray-light;
+        color: @gray-lighter;
     }
 
     .alert-success {
