@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - load plugins.json that can inject additional modules on app start
+   the "Get Started" tutorial is now implemented as a plugin
+
 2015/06/15 0.13.2
 =================
 
